feature(): Display link to webhook store

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,7 @@
   align-items: center;
   justify-content: center;
 }
+
+.heroLink, .heroLink:hover {
+  color: var(--ifm-font-color-base-inverse)
+}
