feature(): Add a button instead of a link

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -11,5 +11,13 @@
 }
 
 .heroLink, .heroLink:hover {
-  color: var(--ifm-font-color-base-inverse)
+  color: var(--ifm-font-color-base-inverse);
+}
+
+.heroButton {
+  background-color: var(--ifm-background-surface-color);
+  color: var(--ifm-color-primary);
+  font-size: xx-large;
+  border-radius: 4px;
+
 }
